--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
 		"dev:host": "pnpm --prefix ./host run dev",
 		"dev:remote": "pnpm --prefix ./remote run dev",
 		"preview": "run-p preview:*",
-		"preview:host": "pnpm --prefix ./host run preview",
-		"preview:remote": "pnpm --prefix ./remote run preview"
+		"preview:host": "pnpm sleep5s && pnpm --prefix ./host run preview",
+		"preview:remote": "pnpm --prefix ./remote run preview",
+		"sleep5s": "node -e 'setTimeout(() => process.exit(0), 5000)'"
 	},
 	"author": {
 		"name": "Giorgio Boa",
