--- a/remote/package.json
+++ b/remote/package.json
@@ -27,14 +27,14 @@
 		"qwik": "qwik"
 	},
 	"devDependencies": {
-		"@builder.io/qwik": "https://pkg.pr.new/@builder.io/qwik@7349b37",
-		"@builder.io/qwik-city": "https://pkg.pr.new/@builder.io/qwik-city@7349b37",
+		"@builder.io/qwik": "1.5.7",
+		"@builder.io/qwik-city": "1.5.7",
 		"@types/eslint": "^8.56.10",
 		"@types/node": "^20.12.7",
 		"@typescript-eslint/eslint-plugin": "^7.7.1",
 		"@typescript-eslint/parser": "^7.7.1",
 		"eslint": "^8.57.0",
-		"eslint-plugin-qwik": "^1.5.5",
+		"eslint-plugin-qwik": "1.5.7",
 		"prettier": "^3.2.5",
 		"typescript": "5.4.5",
 		"undici": "*",
