--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-	"name": "react-microfrontend-demo",
+	"name": "qwik-microfrontend-starter",
 	"version": "1.0.0",
 	"description": "Vite + Module Federation is now possible",
 	"main": "index.js",
 	"scripts": {
-		"install:deps": "pnpm --prefix ./host install && pnpm --prefix ./remote install",
-		"dev": "run-p dev:*",
-		"dev:host": "pnpm --prefix ./host run dev",
-		"dev:remote": "pnpm --prefix ./remote run dev",
-		"preview": "run-p preview:*",
-		"preview:host": "pnpm sleep5s && pnpm --prefix ./host run preview",
-		"preview:remote": "pnpm --prefix ./remote run preview",
+		"dev": "pnpm --filter host --filter remote dev",
+		"preview": "pnpm sleep5s && pnpm --filter host --filter remote preview",
 		"sleep5s": "node -e 'setTimeout(() => process.exit(0), 5000)'"
 	},
 	"author": {
@@ -18,8 +13,25 @@
 		"email": "giorgiob.boa@gmail.com",
 		"url": "https://github.com/gioboa"
 	},
-	"license": "ISC",
-	"dependencies": {
-		"npm-run-all": "^4.1.5"
-	}
+	"contributors": [{
+		"name": "Van Vuong Ngo",
+		"email": "20791239+vanvuongngo@users.noreply.github.com",
+		"url": "https://github.com/vanvuongngo"
+	}],
+	"devDependencies": {
+		"@builder.io/qwik": "^1.9.0",
+		"@builder.io/qwik-city": "^1.9.0",
+		"@types/eslint": "^9.6.1",
+		"@types/node": "^20.16.5",
+		"@typescript-eslint/eslint-plugin": "^8.6.0",
+		"@typescript-eslint/parser": "^8.6.0",
+		"eslint": "^9.10.0",
+		"eslint-plugin-qwik": "^1.9.0",
+		"prettier": "^3.3.3",
+		"typescript": "^5.6.2",
+		"undici": "^6.19.8",
+		"vite": "^5.4.6",
+		"vite-tsconfig-paths": "^5.0.1"
+	},
+	"license": "ISC"
 }
