--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-qwik-empty-starter",
+	"name": "host",
 	"description": "App with Routing built-in ready to create your app",
 	"engines": {
 		"node": "^18.17.0 || ^20.3.0 || >=21.0.0"
@@ -17,28 +17,13 @@
 		"build.preview": "vite build --ssr src/entry.preview.tsx",
 		"build.types": "tsc --incremental --noEmit",
 		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
-		"dev": "vite --mode ssr --port 4174",
+		"dev": "vite --mode ssr --port 4173",
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"fmt": "prettier --write .",
 		"fmt.check": "prettier --check .",
 		"lint": "eslint \"src/**/*.ts*\"",
-		"preview": "qwik build preview && vite preview --open --port 4174",
+		"preview": "qwik build preview && vite preview --open --port 4173",
 		"start": "vite --open --mode ssr",
 		"qwik": "qwik"
-	},
-	"devDependencies": {
-		"@builder.io/qwik": "1.9.0",
-		"@builder.io/qwik-city": "1.9.0",
-		"@types/eslint": "^8.56.10",
-		"@types/node": "^20.12.7",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
-		"eslint": "^8.57.0",
-		"eslint-plugin-qwik": "1.9.0",
-		"prettier": "^3.2.5",
-		"typescript": "5.4.5",
-		"undici": "*",
-		"vite": "^5.2.10",
-		"vite-tsconfig-paths": "^4.2.1"
 	}
 }
