--- a/package.json
+++ b/package.json
@@ -4,31 +4,40 @@
 	"description": "Vite + Module Federation is now possible",
 	"main": "index.js",
 	"scripts": {
-		"dev": "pnpm --filter host --filter remote dev",
-		"preview": "pnpm sleep5s && pnpm --filter host --filter remote preview",
-		"sleep5s": "node -e 'setTimeout(() => process.exit(0), 5000)'"
+		"dev": "pnpm -r dev",
+		"preview": "pnpm -r preview",
+		"lint": "pnpm -r lint"
 	},
 	"author": {
 		"name": "Giorgio Boa",
 		"email": "giorgiob.boa@gmail.com",
 		"url": "https://github.com/gioboa"
 	},
-	"contributors": [{
-		"name": "Van Vuong Ngo",
-		"email": "20791239+vanvuongngo@users.noreply.github.com",
-		"url": "https://github.com/vanvuongngo"
-	}],
+	"contributors": [
+		{
+			"name": "Van Vuong Ngo",
+			"email": "20791239+vanvuongngo@users.noreply.github.com",
+			"url": "https://github.com/vanvuongngo"
+		}
+	],
 	"devDependencies": {
 		"@builder.io/qwik": "^1.9.0",
 		"@builder.io/qwik-city": "^1.9.0",
-		"@types/eslint": "^9.6.1",
+		"@eslint/js": "^8.57.1",
+		"@types/eslint": "^8.56.12",
 		"@types/node": "^20.16.5",
 		"@typescript-eslint/eslint-plugin": "^8.6.0",
 		"@typescript-eslint/parser": "^8.6.0",
-		"eslint": "^9.10.0",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-qwik": "^1.9.0",
+		"eslint-plugin-react": "^7.36.1",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
+		"globals": "^15.9.0",
 		"prettier": "^3.3.3",
 		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.6.0",
 		"undici": "^6.19.8",
 		"vite": "^5.4.6",
 		"vite-tsconfig-paths": "^5.0.1"
