--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "pnpm --filter './apps/*' dev",
 		"preview": "pnpm --filter './apps/*' preview",
-		"lint": "pnpm -r lint"
+		"lint": "pnpm --filter './apps/*' --filter './packages/*' lint"
 	},
 	"author": {
 		"name": "Giorgio Boa",
@@ -21,8 +21,8 @@
 		}
 	],
 	"devDependencies": {
-		"@builder.io/qwik": "^1.9.0",
-		"@builder.io/qwik-city": "^1.9.0",
+		"@builder.io/qwik": "^1.12.0",
+		"@builder.io/qwik-city": "^1.12.0",
 		"@eslint/js": "^8.57.1",
 		"@types/eslint": "^8.56.12",
 		"@types/node": "^20.16.5",
@@ -31,7 +31,7 @@
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-import": "^2.30.0",
-		"eslint-plugin-qwik": "^1.9.0",
+		"eslint-plugin-qwik": "^1.12.0",
 		"eslint-plugin-react": "^7.36.1",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"globals": "^15.9.0",
