add build package script

--- a/apps/remote/package.json
+++ b/apps/remote/package.json
@@ -27,7 +27,7 @@
 		"qwik": "qwik"
 	},
 	"devDependencies": {
-		"@qwik-microfrontend/mfe": "workspace:^1.0.0",
-		"@qwik-microfrontend/ui": "workspace:^1.0.0"
+		"@qwik-microfrontend/mfe": "workspace:^",
+		"@qwik-microfrontend/ui": "workspace:^"
 	}
 }
