--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "pnpm --filter './apps/*' dev",
 		"preview": "pnpm --filter './apps/*' preview",
 		"lint": "pnpm --filter './apps/*' --filter './packages/*' lint",
-		"build.lib": "pnpm --filter './packages/*' build"
+		"build.packages": "pnpm --filter './packages/*' build"
 	},
 	"author": {
 		"name": "Giorgio Boa",
