--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -27,7 +27,8 @@
 		"qwik": "qwik"
 	},
 	"devDependencies": {
-		"@qwik-microfrontend/mfe": "workspace:^1.0.0",
-		"@qwik-microfrontend/ui": "workspace:^1.0.0"
+		"@qwik-microfrontend/mfe": "workspace:^",
+		"@qwik-microfrontend/ui": "workspace:^"
+
 	}
 }
