--- a/packages/mfe/package.json
+++ b/packages/mfe/package.json
@@ -27,7 +27,7 @@
 	"trustedDependencies-annotation": "Needed for bun to allow running install scripts",
 	"type": "module",
 	"scripts": {
-		"build": "pnpm build.types && pnpm build.lib",
+		"build": "pnpm build.lib && pnpm build.types",
     "build.lib": "vite build --mode lib",
 		"build.client": "vite build",
     "build.types": "tsc --emitDeclarationOnly",
