--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -25,5 +25,10 @@
 		"preview": "qwik build preview && vite preview --open --port 4173",
 		"start": "vite --open --mode ssr",
 		"qwik": "qwik"
+	},
+	"devDependencies": {
+		"@qwik-microfrontend/mfe": "workspace:^",
+		"@qwik-microfrontend/ui": "workspace:^"
+
 	}
 }
