--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ES2020",
     "lib": ["es2021", "DOM"],
     "jsx": "react-jsx",
-    "jsxImportSource": "@builder.io/qwik",
+    "jsxImportSource": "@qwik.dev/core",
     "strict": true,
     "declaration": true,
     "declarationDir": "lib-types",
