--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "undici": "^6.19.8",
     "vite": "^5.4.6",
     "vite-tsconfig-paths": "^5.0.1",
-    "@qwik.dev/router": "2.0.0-beta.8",
-    "@qwik.dev/core": "2.0.0-beta.8"
+    "@qwik.dev/router": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/router@47c9284",
+    "@qwik.dev/core": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/core@47c9284"
   },
   "license": "ISC",
   "dependencies": {}
