--- a/package.json
+++ b/package.json
@@ -22,27 +22,25 @@
     }
   ],
   "devDependencies": {
-    "@eslint/js": "^8.57.1",
-    "@types/eslint": "^8.56.12",
-    "@types/node": "^20.16.5",
+    "@eslint/js": "^9.35.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.3.1",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-qwik": "2.0.0-beta.8",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^15.9.0",
+    "globals": "^16.4.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
-    "undici": "^6.19.8",
-    "vite": "^5.4.6",
-    "vite-tsconfig-paths": "^5.0.1",
-    "@qwik.dev/router": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/router@47c9284",
-    "@qwik.dev/core": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/core@47c9284"
+    "vite": "^7.1.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "@qwik.dev/router": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/router@7937",
+    "@qwik.dev/core": "https://pkg.pr.new/QwikDev/qwik/@qwik.dev/core@7937"
   },
-  "license": "ISC",
-  "dependencies": {}
+  "license": "ISC"
 }
